--- a/labs/lab4/lab4/lab4.csproj
+++ b/labs/lab4/lab4/lab4.csproj
@@ -59,10 +59,19 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="ParameterSettingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ParameterSettingForm.Designer.cs">
+      <DependentUpon>ParameterSettingForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ParameterSettingForm.resx">
+      <DependentUpon>ParameterSettingForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
