--- a/labs/lab1/lab1.csproj
+++ b/labs/lab1/lab1.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NAudio, Version=1.10.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\NAudio.1.10.0\lib\net35\NAudio.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,17 +49,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="classes\ImpulseSignal.cs" />
-    <Compile Include="classes\Point.cs" />
-    <Compile Include="classes\SinusoidalSignal.cs" />
-    <Compile Include="classes\WaveFileWriter.cs" />
+    <Compile Include="classes\Check.cs" />
+    <Compile Include="classes\modulation methods\classes\AmplitudeModulation.cs" />
+    <Compile Include="classes\modulation methods\classes\FrequenceModulation.cs" />
+    <Compile Include="classes\modulation methods\interfaces\IModulationMethod.cs" />
+    <Compile Include="classes\signals\GarmonicSignal.cs" />
+    <Compile Include="classes\signals\ImpulseSignal.cs" />
+    <Compile Include="classes\signals\NoiseSignal.cs" />
+    <Compile Include="classes\signals\PoligarmonicSignal.cs" />
+    <Compile Include="classes\signals\SawtoothSignal.cs" />
+    <Compile Include="classes\signals\Signal.cs" />
+    <Compile Include="classes\signals\SinusoidalSignal.cs" />
+    <Compile Include="classes\file writers\WaveFileWriter.cs" />
+    <Compile Include="classes\signals\TriangleSignal.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="interfaces\ISignal.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -71,6 +82,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
